Fix stretched images

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -300,6 +300,11 @@ code {
   font-family: "IBM Plex Mono" !important;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
   --ifm-color-primary: var($color-brown);
